# pandoc-sieve

./: README.md  pyproject.toml  sieve.py
sieve/: build.py  mermaid.py  paths.py
