[project]
name = "pandoc-sieve"
version = "0.1.0"
description = "A simple [Pandoc](https://pandoc.org/) filter for generating mermaid diagrams within `mermaid` code blocks."
authors = [{ name = "Thomas Woolhouse" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["panflute>=2.3.1", "pyyaml>=6.0.2"]

[project.scripts]
sieve-mermaid = "sieve.mermaid:main"
mdoc = "sieve.build:main"
